Fix bottom scrollbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -662,6 +662,7 @@ body {
 
   .pages .generals .stats .row {
     display: flex;
+    width: 100%;
     flex-direction: column;
   }
 
@@ -734,8 +735,9 @@ body {
 
   .pages .links .list ul li .icons {
     position: absolute;
-    padding-top: 20px;
-    padding-left: 190px;
+    padding-top: 0;
+    padding-bottom: 120px;
+    padding-left: 130px;
     top: 5;
   }
 }
